Nine project traduction completed

--- a/nine.html
+++ b/nine.html
@@ -67,18 +67,18 @@
           <!-- HERO -->
           <section class="techHero">
             <div class="heroLeft">
-              <h1 class="heroTitle">Nine O'Clock</h1>
+              <h1 class="heroTitle" data-i18="projectSingle.nine.hero.title">Nine O'Clock</h1>
 
-              <p class="heroDescription">
+              <p class="heroDescription" data-i18="projectSingle.nine.hero.description">
                 Nine O’Clock est un jeu vidéo développé en équipe de 10 personnes durant une session complète dans le
                 cadre d’un cours de projet commun, où le joueur traverse un univers steampunk en grindant sur des rails
                 dans une aventure inspirée du thème imposé Marty McFly.
               </p>
 
               <ul class="heroMeta">
-                <li>Unreal Engine</li>
-                <li>Blueprints</li>
-                <li>10 participants</li>
+                <li data-i18="projectSingle.nine.hero.meta1">Unreal Engine</li>
+                <li data-i18="projectSingle.nine.hero.meta2">Blueprints</li>
+                <li data-i18="projectSingle.nine.hero.meta3">10 participants</li>
               </ul>
             </div>
 
@@ -105,27 +105,35 @@
             </div>
 
             <div class="breakdownContent">
-              <h2 class="breakdownTitle">Mon rôle dans le projet</h2>
+              <h2 class="breakdownTitle" data-i18="projectSingle.nine.sections.role.title">
+                Mon rôle dans le projet
+              </h2>
 
-              <p>
-                Dans ce projet, j’ai développé le character controller en partant de zéro, en travaillant le ressenti du mouvement
-                (vitesse, contrôle aérien et sauts) pour le rendre agréable à jouer. J’ai également conçu l’interface utilisateur et
-                intégré l’ensemble des menus afin qu’ils fonctionnent autant avec la souris qu’avec une manette.
+              <p data-i18="projectSingle.nine.sections.role.text">
+                Dans ce projet, j’ai développé le character controller en partant de zéro, en travaillant le ressenti du
+                mouvement (vitesse, contrôle aérien et sauts) pour le rendre agréable à jouer. J’ai également conçu
+                l’interface utilisateur et intégré l’ensemble des menus afin qu’ils fonctionnent autant avec la souris
+                qu’avec une manette.
               </p>
             </div>
           </section>
 
           <!-- FEATURES -->
           <section class="techFeatures">
-            <h2 class="sectionTitle">Systèmes clés</h2>
+            <h2 class="sectionTitle" data-i18="projectSingle.nine.sections.featuresTitle">
+              Systèmes clés
+            </h2>
+
 
             <div class="featuresGrid">
 
               <article class="featureCard ">
                 <img class="featureImage" src="assets/Nine/images/NineOClockBlueprint.webp" alt="">
-                <h3 class="featureTitle">Character controller</h3>
+                <h3 class="featureTitle" data-i18="projectSingle.nine.sections.feature1.title">
+                  Character controller
+                </h3>
 
-                <p>
+                <p data-i18="projectSingle.nine.sections.feature1.text">
                   NineOClock a été mon premier projet réalisé sur Unreal Engine 5. En partant de zéro, j’ai appris à
                   développer un character controller agréable à jouer, en travaillant la vitesse, le contrôle aérien et
                   la hauteur des sauts.
@@ -134,9 +142,11 @@
 
               <article class="featureCard ">
                 <img class="featureImage" src="assets/Nine/images/NineUI.webp" alt="">
-                <h3 class="featureTitle">Les menus (UI)</h3>
+                <h3 class="featureTitle" data-i18="projectSingle.nine.sections.feature2.title">
+                  Les menus (UI)
+                </h3>
 
-                <p>
+                <p data-i18="projectSingle.nine.sections.feature2.text">
                   Créer une interface fonctionnelle à la fois pour la souris et la manette dans Unreal Engine 5
                   représentait un défi important, notamment pour assurer une transition fluide entre les deux types
                   d’entrées. J’ai travaillé à rendre l’expérience claire et cohérente afin d’offrir une interface
@@ -146,9 +156,11 @@
 
               <article class="featureCard ">
                 <img class="featureImage" src="assets/Nine/images/NineOClockDesign.webp" alt="">
-                <h3 class="featureTitle">Level design</h3>
+                <h3 class="featureTitle" data-i18="projectSingle.nine.sections.feature3.title">
+                  Level design
+                </h3>
 
-                <p>
+                <p data-i18="projectSingle.nine.sections.feature3.text">
                   Ce projet m’a permis de développer une solide compréhension du level design et de son impact sur
                   l’expérience joueur. En analysant notre premier prototype et en repensant entièrement la structure des
                   niveaux en passant de l'horizontal à un niveau plus vertical, j’ai appris l’importance de l’itération,
@@ -167,20 +179,26 @@
             </div>
 
             <div class="breakdownContent">
-              <h2 class="breakdownTitle">Défis techniques</h2>
+              <h2 class="breakdownTitle" data-i18="projectSingle.nine.sections.challenge.title">
+                Défis techniques
+              </h2>
 
-              <p>
-                Un des principaux défis techniques a été de créer une interface compatible à la fois avec la souris et la manette dans Unreal Engine 5. J’ai dû gérer les différences d’interaction entre les deux modes d’entrée et assurer une transition fluide afin d’offrir une expérience utilisateur cohérente et accessible.
+              <p data-i18="projectSingle.nine.sections.challenge.text">
+                Un des principaux défis techniques a été de créer une interface compatible à la fois avec la souris et
+                la manette dans Unreal Engine 5. J’ai dû gérer les différences d’interaction entre les deux modes
+                d’entrée et assurer une transition fluide afin d’offrir une expérience utilisateur cohérente et
+                accessible.
               </p>
             </div>
           </section>
 
 
-          <!-- CREDITS -->
           <section class="techCredits">
 
             <div class="creditsGroup">
-              <h3 class="creditsRole">Programmeurs</h3>
+              <h3 class="creditsRole" data-i18="projectSingle.nine.credits.programmers">
+                Programmeurs
+              </h3>
               <ul class="creditsNames">
                 <li>Émile Paré-Allinger</li>
                 <li>Roman Cros</li>
@@ -189,7 +207,9 @@
             </div>
 
             <div class="creditsGroup">
-              <h3 class="creditsRole">Designers</h3>
+              <h3 class="creditsRole" data-i18="projectSingle.nine.credits.designers">
+                Designers
+              </h3>
               <ul class="creditsNames">
                 <li>Julien Plamondon</li>
                 <li>Roman Cros</li>
@@ -199,7 +219,9 @@
             </div>
 
             <div class="creditsGroup">
-              <h3 class="creditsRole">Artistes</h3>
+              <h3 class="creditsRole" data-i18="projectSingle.nine.credits.artists">
+                Artistes
+              </h3>
               <ul class="creditsNames">
                 <li>Guillaume St-Germain</li>
                 <li>Jérémie Plamondon</li>
