--- a/projects.html
+++ b/projects.html
@@ -143,7 +143,7 @@
                             Voici un jeu vidéo que j’ai réalisé dans le cadre de mon cours de projet commun...
                         </p>
 
-                        <a href="nineoclock.html" class="projectButton" data-i18="projects.nineoclock.cta">
+                        <a href="nine.html" class="projectButton" data-i18="projects.nineoclock.cta">
                             Voir le projet
                         </a>
 
