Rex Montis project traduction completed

--- a/rexMontis.html
+++ b/rexMontis.html
@@ -66,9 +66,14 @@
       <section class="projectStory projectStoryVideo">
 
         <section class="storyHero">
-          <h1 class="storyTitle">Rex Montis</h1>
-          <p class="storySubtitle">
-            Rex Montis est un jeu multijoueur créé en 8 semaines dans le cadre de Chaos Média 2021, une compétition entre classes en production interactive. Développé en équipe dans une structure de mini-entreprise, le projet a remporté la 1re place lors de l’événement.
+          <h1 class="storyTitle" data-i18="projectSingle.rex.hero.title">
+            Rex Montis
+          </h1>
+
+          <p class="storySubtitle" data-i18="projectSingle.rex.hero.subtitle">
+            Rex Montis est un jeu multijoueur créé en 8 semaines dans le cadre de Chaos Média 2021, une compétition
+            entre classes en production interactive. Développé en équipe dans une structure de mini-entreprise, le
+            projet a remporté la 1re place lors de l’événement.
           </p>
 
           <div class="heroMedia">
@@ -89,8 +94,12 @@
 
         <section class="storyChapter">
           <div class="chapterText">
-            <h2>Le projet</h2>
-            <p>Le développement s’est fait en collaboration étroite entre plusieurs disciplines, avec une forte importance accordée à la communication et à l’organisation. Travailler dans cette structure m’a permis de découvrir un workflow proche d’un vrai environnement de production.</p>
+            <h2 data-i18="projectSingle.rex.sections.project.title">Le projet</h2>
+            <p data-i18="projectSingle.rex.sections.project.text">
+              Le développement s’est fait en collaboration étroite entre plusieurs disciplines, avec une forte
+              importance accordée à la communication et à l’organisation. Travailler dans cette structure m’a permis de
+              découvrir un workflow proche d’un vrai environnement de production.
+            </p>
           </div>
 
           <div class="chapterMedia">
@@ -100,8 +109,12 @@
 
         <section class="storyChapter reverse">
           <div class="chapterText">
-            <h2>Mon rôle</h2>
-            <p>Je travaillais principalement sur la programmation en C#, notamment les menus, les systèmes de score et certains aspects du multijoueur. Au fil du projet, j’ai également contribué à l’intégration de contenu et au peaufinage général afin d’améliorer l’expérience de jeu.</p>
+            <h2 data-i18="projectSingle.rex.sections.role.title">Mon rôle</h2>
+            <p data-i18="projectSingle.rex.sections.role.text">
+              Je travaillais principalement sur la programmation en C#, notamment les menus, les systèmes de score et
+              certains aspects du multijoueur. Au fil du projet, j’ai également contribué à l’intégration de contenu et
+              au peaufinage général afin d’améliorer l’expérience de jeu.
+            </p>
           </div>
 
           <div class="chapterMedia">
@@ -112,8 +125,16 @@
 
         <section class="storyChapter">
           <div class="chapterText">
-            <h2>Gestion de projet</h2>
-            <p>Lors de ce projet, j’ai appris à travailler dans une grande équipe et à gérer GitHub, en résolvant de nombreux problèmes de merge entre les versions de mes collègues. Face à des difficultés de communication et de coordination, j’ai soutenu notre gestionnaire de projet en créant des listes de tâches et en assurant le suivi entre les équipes. Cette expérience m’a permis de mieux organiser le travail sous pression et j’ai adoré prendre ce rôle de chef d’équipe pour garantir la réussite du projet.</p>
+            <h2 data-i18="projectSingle.rex.sections.management.title">
+              Gestion de projet
+            </h2>
+            <p data-i18="projectSingle.rex.sections.management.text">
+              Lors de ce projet, j’ai appris à travailler dans une grande équipe et à gérer GitHub, en résolvant de
+              nombreux problèmes de merge entre les versions de mes collègues. Face à des difficultés de communication
+              et de coordination, j’ai soutenu notre gestionnaire de projet en créant des listes de tâches et en
+              assurant le suivi entre les équipes. Cette expérience m’a permis de mieux organiser le travail sous
+              pression et j’ai adoré prendre ce rôle de chef d’équipe pour garantir la réussite du projet.
+            </p>
           </div>
 
           <div class="chapterMedia">
@@ -123,8 +144,15 @@
 
         <section class="storyChapter reverse">
           <div class="chapterText">
-            <h2>Un défi relevé</h2>
-            <p>Lors de ce projet, j’ai découvert ce que signifie travailler dans une grande équipe. Gérer GitHub et tous les commits a été un vrai défi, au point où j’ai dû former mes collègues à GitHub en plein milieu du projet pour remettre un peu d’ordre. Je ne peux même pas compter le nombre de fois où j’ai dû résoudre des problèmes de merge entre leurs différentes versions du code.</p>
+            <h2 data-i18="projectSingle.rex.sections.challenge.title">
+              Un défi relevé
+            </h2>
+            <p data-i18="projectSingle.rex.sections.challenge.text">
+              Lors de ce projet, j’ai découvert ce que signifie travailler dans une grande équipe. Gérer GitHub et tous
+              les commits a été un vrai défi, au point où j’ai dû former mes collègues à GitHub en plein milieu du
+              projet pour remettre un peu d’ordre. Je ne peux même pas compter le nombre de fois où j’ai dû résoudre des
+              problèmes de merge entre leurs différentes versions du code.
+            </p>
           </div>
 
           <div class="chapterMedia">
@@ -134,75 +162,90 @@
 
         <section class="storyCredits">
 
-  <div class="creditsGroup">
-    <h3 class="creditsRole">Gestionnaires</h3>
-    <ul class="creditsNames">
-      <li>Marie-Ève Lamontagne</li>
-      <li>Gabriel Gauthier</li>
-    </ul>
-  </div>
+          <div class="creditsGroup">
+            <h3 class="creditsRole" data-i18="projectSingle.rex.credits.managers">
+              Gestionnaires
+            </h3>
+            <ul class="creditsNames">
+              <li>Marie-Ève Lamontagne</li>
+              <li>Gabriel Gauthier</li>
+            </ul>
+          </div>
 
-  <div class="creditsGroup">
-    <h3 class="creditsRole">Scénariste</h3>
-    <ul class="creditsNames">
-      <li>Maxime Picard</li>
-    </ul>
-  </div>
+          <div class="creditsGroup">
+            <h3 class="creditsRole" data-i18="projectSingle.rex.credits.writer">
+              Scénariste
+            </h3>
+            <ul class="creditsNames">
+              <li>Maxime Picard</li>
+            </ul>
+          </div>
 
-  <div class="creditsGroup">
-    <h3 class="creditsRole">Programmeurs</h3>
-    <ul class="creditsNames">
-      <li>Gabriel Gauthier</li>
-      <li>Jérémy Bleau</li>
-      <li>Caroline Forget</li>
-      <li>Jerry Wang</li>
-    </ul>
-  </div>
+          <div class="creditsGroup">
+            <h3 class="creditsRole" data-i18="projectSingle.rex.credits.programmers">
+              Programmeurs
+            </h3>
+            <ul class="creditsNames">
+              <li>Gabriel Gauthier</li>
+              <li>Jérémy Bleau</li>
+              <li>Caroline Forget</li>
+              <li>Jerry Wang</li>
+            </ul>
+          </div>
 
-  <div class="creditsGroup">
-    <h3 class="creditsRole">Graphistes</h3>
-    <ul class="creditsNames">
-      <li>André Barry</li>
-      <li>Michaël Janes-Villiard</li>
-      <li>M’hammed Khilaji</li>
-      <li>Alexia Lepage</li>
-      <li>Audrey Sénécal</li>
-    </ul>
-  </div>
+          <div class="creditsGroup">
+            <h3 class="creditsRole" data-i18="projectSingle.rex.credits.graphists">
+              Graphistes
+            </h3>
+            <ul class="creditsNames">
+              <li>André Barry</li>
+              <li>Michaël Janes-Villiard</li>
+              <li>M’hammed Khilaji</li>
+              <li>Alexia Lepage</li>
+              <li>Audrey Sénécal</li>
+            </ul>
+          </div>
 
-  <div class="creditsGroup">
-    <h3 class="creditsRole">Artistes 3D</h3>
-    <ul class="creditsNames">
-      <li>Jean-Marie Gariépy</li>
-      <li>Rudy Breton</li>
-      <li>Elena Jean-Michel</li>
-      <li>Audrey Langlois</li>
-      <li>Samuel Palma-Lemieux</li>
-    </ul>
-  </div>
+          <div class="creditsGroup">
+            <h3 class="creditsRole" data-i18="projectSingle.rex.credits.artists3d">
+              Artistes 3D
+            </h3>
+            <ul class="creditsNames">
+              <li>Jean-Marie Gariépy</li>
+              <li>Rudy Breton</li>
+              <li>Elena Jean-Michel</li>
+              <li>Audrey Langlois</li>
+              <li>Samuel Palma-Lemieux</li>
+            </ul>
+          </div>
 
-  <div class="creditsGroup">
-    <h3 class="creditsRole">Réalisateurs vidéo</h3>
-    <ul class="creditsNames">
-      <li>Alexandre Jugureanu</li>
-      <li>Christophe Pin</li>
-    </ul>
-  </div>
+          <div class="creditsGroup">
+            <h3 class="creditsRole" data-i18="projectSingle.rex.credits.video">
+              Réalisateurs vidéo
+            </h3>
+            <ul class="creditsNames">
+              <li>Alexandre Jugureanu</li>
+              <li>Christophe Pin</li>
+            </ul>
+          </div>
 
-  <div class="creditsGroup">
-    <h3 class="creditsRole">Designers sonores</h3>
-    <ul class="creditsNames">
-      <li>Pierre-Olivier Croteau</li>
-      <li>Jean-Marie Gariépy</li>
-    </ul>
-  </div>
+          <div class="creditsGroup">
+            <h3 class="creditsRole" data-i18="projectSingle.rex.credits.audio">
+              Designers sonores
+            </h3>
+            <ul class="creditsNames">
+              <li>Pierre-Olivier Croteau</li>
+              <li>Jean-Marie Gariépy</li>
+            </ul>
+          </div>
 
-</section>
+        </section>
+
 
       </section>
     </div>
   </div>
- <div id="particles-bg"></div>
+  <div id="particles-bg"></div>
   <div class="lang-switcher" data-component="LanguageSwitcher">
     <button class="lang-switcher__btn">FR</button>
     <div class="lang-switcher__menu">
