latency project traduction completed

--- a/latency.html
+++ b/latency.html
@@ -67,7 +67,7 @@
 
         <section class="storyHero">
           <h1 class="storyTitle">Latency</h1>
-          <p class="storySubtitle">
+          <p class="storySubtitle" data-i18="projectSingle.latency.hero.subtitle">
             Latency est un jeu de stratégie en temps réel à petite échelle, conçu pour le mode coopératif en écran
             partagé à la manette, dans lequel deux joueurs s’affrontent pour capturer des zones et mener à l’extinction
             de la colonie extraterrestre adverse.
@@ -91,10 +91,12 @@
 
         <section class="storyChapter">
           <div class="chapterText">
-            <h2>Le projet</h2>
-            <p>Latency a été mon premier jeu vidéo universitaire, ce qui a nécessité une énorme période
+            <h2 data-i18="projectSingle.latency.project.title">Le projet</h2>
+            <p data-i18="projectSingle.latency.project.text">
+              Latency a été mon premier jeu vidéo universitaire, ce qui a nécessité une énorme période
               d’adaptation et d’apprentissage. Collaborer avec des personnes issues de
-              milieux différents m’a ouvert les yeux sur la complexité du travail d’équipe.</p>
+              milieux différents m’a ouvert les yeux sur la complexité du travail d’équipe.
+            </p>
           </div>
 
           <div class="chapterMedia">
@@ -104,9 +106,11 @@
 
         <section class="storyChapter reverse">
           <div class="chapterText">
-            <h2>Le processus</h2>
-            <p>Avec cette équipe, j’ai découvert des outils et méthodes comme le planning poker et Notion, qui nous ont
-              aidés à mieux organiser le travail et à collaborer plus efficacement.</p>
+            <h2 data-i18="projectSingle.latency.process.title">Le processus</h2>
+            <p data-i18="projectSingle.latency.process.text">
+              Avec cette équipe, j’ai découvert des outils et méthodes comme le planning poker et Notion, qui nous ont
+              aidés à mieux organiser le travail et à collaborer plus efficacement.
+            </p>
           </div>
 
           <div class="chapterMedia">
@@ -116,8 +120,12 @@
 
         <section class="storyChapter">
           <div class="chapterText">
-            <h2>Mon premier rôle universitaire</h2>
-            <p>J’ai développé les interfaces liées aux valeurs de gameplay (barres de vie, économie, feedback visuel) et assuré la navigation complète des menus à la manette. Ce travail m’a permis de renforcer ma compréhension du design de jeu et de l’importance de l’itération pour améliorer l’expérience joueur.</p>
+            <h2 data-i18="projectSingle.latency.role.title">Mon premier rôle universitaire</h2>
+            <p data-i18="projectSingle.latency.role.text">
+              J’ai développé les interfaces liées aux valeurs de gameplay (barres de vie, économie, feedback visuel)
+              et assuré la navigation complète des menus à la manette. Ce travail m’a permis de renforcer ma
+              compréhension du design de jeu et de l’importance de l’itération pour améliorer l’expérience joueur.
+            </p>
           </div>
 
           <div class="chapterMedia">
@@ -127,8 +135,12 @@
 
         <section class="storyChapter reverse">
           <div class="chapterText">
-            <h2>Un défi relevé</h2>
-            <p>J’ai appris à collaborer avec le code d’autres personnes et à m’adapter à leurs façons de travailler. Même si cela représentait un défi au début, cette expérience m’a permis de développer ma flexibilité et ma capacité à contribuer efficacement à des projets de programmation complexes.</p>
+            <h2 data-i18="projectSingle.latency.challenge.title">Un défi relevé</h2>
+            <p data-i18="projectSingle.latency.challenge.text">
+              J’ai appris à collaborer avec le code d’autres personnes et à m’adapter à leurs façons de travailler.
+              Même si cela représentait un défi au début, cette expérience m’a permis de développer ma flexibilité et
+              ma capacité à contribuer efficacement à des projets de programmation complexes.
+            </p>
           </div>
 
           <div class="chapterMedia">
@@ -138,31 +150,31 @@
 
         <section class="storyCredits">
 
-  <div class="creditsGroup">
-    <h3 class="creditsRole">Programmeurs</h3>
-    <ul class="creditsNames">
-      <li>Gabriel Gauthier</li>
-      <li>Maxime Rioux</li>
-      <li>Jérémy Bolduc</li>
-    </ul>
-  </div>
+          <div class="creditsGroup">
+            <h3 class="creditsRole" data-i18="projectSingle.latency.credits.programmers">Programmeurs</h3>
+            <ul class="creditsNames">
+              <li>Gabriel Gauthier</li>
+              <li>Maxime Rioux</li>
+              <li>Jérémy Bolduc</li>
+            </ul>
+          </div>
 
-  <div class="creditsGroup">
-    <h3 class="creditsRole">Designers</h3>
-    <ul class="creditsNames">
-      <li>Roman Cros</li>
-      <li>Alexander Tanasie</li>
-    </ul>
-  </div>
+          <div class="creditsGroup">
+            <h3 class="creditsRole" data-i18="projectSingle.latency.credits.designers">Designers</h3>
+            <ul class="creditsNames">
+              <li>Roman Cros</li>
+              <li>Alexander Tanasie</li>
+            </ul>
+          </div>
 
-  <div class="creditsGroup">
-    <h3 class="creditsRole">Audio</h3>
-    <ul class="creditsNames">
-      <li>Esteban Gilbert</li>
-    </ul>
-  </div>
+          <div class="creditsGroup">
+            <h3 class="creditsRole" data-i18="projectSingle.latency.credits.audio">Audio</h3>
+            <ul class="creditsNames">
+              <li>Esteban Gilbert</li>
+            </ul>
+          </div>
 
-</section>
+        </section>
 
 
     </div>
