Carnaval project traduction completed

--- a/carnaval.html
+++ b/carnaval.html
@@ -67,7 +67,7 @@
 
         <section class="storyHero">
           <h1 class="storyTitle">Carnaval VR</h1>
-          <p class="storySubtitle">
+          <p class="storySubtitle" data-i18="projectSingle.carnaval.hero.subtitle">
             Carnaval VR est une expérience immersive en réalité virtuelle où les joueurs peuvent explorer un carnaval
             interactif et s’amuser avec différentes attractions. Développé pendant mon stage chez AleoVR, ce projet m’a
             plongé dans le monde fascinant de la VR et m’a permis de tester mes capacités dans un contexte
@@ -92,11 +92,13 @@
 
         <section class="storyChapter">
           <div class="chapterText">
-            <h2>Le projet</h2>
-            <p>Au début du stage, j’ai découvert le développement en VR sur Unity et appris à configurer le casque et
+            <h2 data-i18="projectSingle.carnaval.project.title">Le projet</h2>
+            <p data-i18="projectSingle.carnaval.project.text">
+              Au début du stage, j’ai découvert le développement en VR sur Unity et appris à configurer le casque et
               les packages nécessaires. Grâce au framework mis à disposition par AleoVR, j’ai pu explorer des scènes et
               interactions VR existantes, et comprendre les bases du contrôle des objets avec les mains, du tir à l’arc
-              et d’autres mécaniques immersives.</p>
+              et d’autres mécaniques immersives.
+            </p>
           </div>
 
           <div class="chapterMedia">
@@ -106,11 +108,13 @@
 
         <section class="storyChapter reverse">
           <div class="chapterText">
-            <h2>Mon rôle</h2>
-            <p>Je me suis concentré sur la mise en place des interactions VR : attraper, lancer, tirer, et manipuler des
+            <h2 data-i18="projectSingle.carnaval.role.title">Mon rôle</h2>
+            <p data-i18="projectSingle.carnaval.role.text">
+              Je me suis concentré sur la mise en place des interactions VR : attraper, lancer, tirer, et manipuler des
               objets dans le carnaval. J’ai également contribué à l’implémentation des mécaniques de jeu et à
               l’intégration des assets dans Unity, tout en veillant à ce que chaque interaction soit fluide et intuitive
-              pour le joueur.</p>
+              pour le joueur.
+            </p>
           </div>
 
           <div class="chapterMedia">
@@ -120,11 +124,13 @@
 
         <section class="storyChapter">
           <div class="chapterText">
-            <h2>Un apprentissage clé</h2>
-            <p>Ce projet m’a permis de me familiariser avec le développement VR professionnel, de comprendre les
+            <h2 data-i18="projectSingle.carnaval.learning.title">Un apprentissage clé</h2>
+            <p data-i18="projectSingle.carnaval.learning.text">
+              Ce projet m’a permis de me familiariser avec le développement VR professionnel, de comprendre les
               contraintes techniques et ergonomiques propres à ce médium, et d’explorer ma créativité pour créer des
               interactions engageantes. J’ai beaucoup appris sur l’itération rapide et le design orienté utilisateur en
-              environnement immersif.</p>
+              environnement immersif.
+            </p>
           </div>
 
           <div class="chapterMedia">
@@ -134,11 +140,13 @@
 
         <section class="storyChapter reverse">
           <div class="chapterText">
-            <h2>Défis techniques</h2>
-            <p>Le plus grand défi a été de transférer correctement le projet Unity sur le casque VR pour tester les
+            <h2 data-i18="projectSingle.carnaval.challenge.title">Défis techniques</h2>
+            <p data-i18="projectSingle.carnaval.challenge.text">
+              Le plus grand défi a été de transférer correctement le projet Unity sur le casque VR pour tester les
               interactions en conditions réelles. Installer et configurer tous les packages nécessaires était complexe,
               et j’ai dû chercher et tester plusieurs solutions pour que tout fonctionne correctement. Cette étape m’a
-              beaucoup appris sur le flux de travail VR et la résolution de problèmes techniques.</p>
+              beaucoup appris sur le flux de travail VR et la résolution de problèmes techniques.
+            </p>
           </div>
 
           <div class="chapterMedia">
@@ -149,18 +157,17 @@
         <section class="storyCredits">
 
           <div class="creditsGroup">
-            <h3 class="creditsRole">Programmeurs</h3>
+            <h3 class="creditsRole" data-i18="projectSingle.carnaval.credits.programmers">Programmeurs</h3>
             <ul class="creditsNames">
               <li>Gabriel Gauthier</li>
               <li>Caroline Forget</li>
-
             </ul>
           </div>
 
           <div class="creditsGroup">
-            <h3 class="creditsRole">Artistes</h3>
+            <h3 class="creditsRole" data-i18="projectSingle.carnaval.credits.artists">Artistes</h3>
             <ul class="creditsNames">
-              <li>Samuel Palma-Lemieux </li>
+              <li>Samuel Palma-Lemieux</li>
             </ul>
           </div>
 
